# browser-usbtan

./: .gitignore  CMakeLists.txt  README.md  usbtan.json.in
browser-extension/: background.js  content.js  flickercode_scraper.js  manifest.json
cmake/: FindGwenhywfar.cmake  FindLibchipcard.cmake  include-what-you-use.cmake
src/: flickercode.c  flickercode.h  generate_tan.cc  generate_tan.hh  hhd_command.cc  hhd_command.hh  main.cc  resolve_func.c  resolve_func.h  usbtan-cli.cc
